# webgpu-boilerplate

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  vite.config.js
core/.cargo/: config.toml
core/src/: buffer_manager.rs  gpu_context.rs  lib.rs  pipeline_manager.rs  renderer.rs  texture_manager.rs  utils.rs
core/src/shader/: default.wgsl
src/: main.ts  style.css
src/core/: Cargo.toml
src/core/src/: lib.rs
src/core/src/shader/: default.wgsl
