[package]
name = "core"
version = "0.1.0"
edition = "2024"
authors = ["Yash Saxena <https://github.com/YashSaxena9>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
bytemuck = "1.22.0"
console_log = { version = "1.0.0", features = ["color"] }
log = "0.4.26"
wasm-bindgen = "0.2.100"
wasm-bindgen-futures = "0.4.50"
web-sys = { version = "0.3.77", features = ["HtmlCanvasElement"] }
# web-sys = { version = "0.3.77", features = ["HtmlCanvasElement", "GpuCanvasContext"] }
wgpu = "24.0.0"
